Phase2/works
athira@INTVMLT2342:/mnt/c/Users/2022004/Documents/SystemStatLoggingMicroservice/build$ make
Consolidate compiler generated dependencies of target server
[ 10%] Building CXX object CMakeFiles/server.dir/source/system_stats.cpp.o
/mnt/c/Users/2022004/Documents/SystemStatLoggingMicroservice/source/system_stats.cpp: In function ‘long int getSystemBootTime()’:
/mnt/c/Users/2022004/Documents/SystemStatLoggingMicroservice/source/system_stats.cpp:31:35: error: variable ‘std::istringstream ss’ has initializer but incomplete type
   31 |         std::istringstream ss(line);
      |                                   ^
make[2]: *** [CMakeFiles/server.dir/build.make:90: CMakeFiles/server.dir/source/system_stats.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/server.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
